Implements the new petitions

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -189,11 +189,12 @@
                                                 <template v-else>
                                                     by and through counsel,
                                                     <span class="no-visible">{{settings['attorney']}}</span><input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
-                                                </template>, and hereby moves the Court to expunge the record of the following charge
-                                                <span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602(a)(1)(B), the following <span v-if="filing.multipleCounts">offenses are</span><span v-else>offense is</span> no longer criminal and should be expunged immediately:</p>
+                                                </template>, and hereby moves the Court to expunge the record of the following 
+                                                <span v-if="filing.multipleCounts">charges</span><span v-else>charge</span> pursuant to 13 V.S.A. &sect; 7602(a)(1)(B).</p>
+                                                 <p>1. Petitioner was convicted of the following <span v-if="filing.multipleCounts">crimes</span><span v-else>crime</span>:</p>
                                             <table class="count-table">
                                                 <thead class="count-table__header">
-                                                    <th valign="middle" scope="col">Date of Dismissal</th>
+                                                    <th valign="middle" scope="col">Conviction Date</th>
                                                     <th valign="middle" scope="col">Charge<span v-if="filing.multipleCounts">s</span></th>
                                                 </thead>
                                                 <tbody class="count-table__body">
@@ -208,8 +209,9 @@
                                                 </tbody>
                                             </table>
 
-                                            <p>2. Expunging all record of <span v-if="filing.multipleCounts">these
-                                                    offenses</span><span v-else>this offense</span> serves the interest of justice, as</p>
+                                            <p>2. The underlying conduct of <span v-if="filing.multipleCounts">these
+                                                    offenses</span><span v-else>this offense</span> is no longer prohibited by law or designated as a criminal offense.</p>
+                                            <p>3. Expunging all record of this conviction serves the interest of justice.</p>
                                         </div>
 
 
@@ -267,8 +269,8 @@
                                                     <span class="no-visible">{{settings['attorney']}}</span>
                                                     <input class="no-print" v-model="settings['attorney']" placeholder="Attorney Name">
                                                 </template>, and hereby moves the Court to seal the record of the above-captioned conviction
-                                                <span v-if="filing.multipleCounts">s</span> pursuant to 33 V.S.A. &sect; 5119(g).</p>
-                                            <p>1. Petitioner was convicted of the following DUI crime<span v-if="filing.multipleCounts">s</span>:</p>
+                                                <span v-if="filing.multipleCounts">s</span> pursuant to 13 V.S.A. &sect; 7602(a)(1)(C).</p>
+                                            <p>1. Petitioner was convicted of the following crime<span v-if="filing.multipleCounts">s</span>:</p>
                                             <table class="count-table">
                                                 <thead class="count-table__header">
                                                     <th valign="middle" scope="col">Conviction Date</th>
@@ -287,11 +289,11 @@
                                                 <!--<tfoot class="footer-space"><tr><td>&nbsp;</td></tr></tfoot>-->
 
                                             </table>
-                                            <p>2. Petitioner was under 21 when the crime<span v-if="filing.multipleCounts">s
-                                                    were</span><span v-else> was</span> allegedly committed.</p>
+                                            <p>2. At least 10 years have elapsed since the date petitioner successfully completed their sentence.</p>
 
-                                            <p>3. Petitioner was not later convicted of a listed crime, pursuant to 13 V.S.A. &sect; 5301(7), nor is petitioner currently being charged of such an offense.</p>
-                                            <p>4. Petitioner believes the court will find that they have been rehabilitated, as evidenced by the following:</p>
+                                            <p>3. This conviction is the only violation of 23 V.S.A. &sect; 1201 that petitioner has on their record, and petitioner has not been convicted of any new crime since they were convicted of this offense.</p>
+                                            <p>4. All restitution ordered here has been paid in full.</p>
+                                            <p>5. Sealing this record serves the interest of justice, as</p>
                                         </div>
 
 
