--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -15,8 +15,8 @@
 
     <!-- vue -->
     <script src="node_modules/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15/dist/smooth-scroll.polyfills.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/gumshoe@4/dist/gumshoe.polyfills.min.js"></script>
+    <script src="smooth-scroll-master/dist/smooth-scroll.polyfills.js"></script>
+    <script src="node_modules/gumshoejs/dist/gumshoe.polyfills.js"></script>    
 
     <!-- font awesome -->
     <link rel="stylesheet" href="fontawesome-free-5.10.1-web/css/all.css">
