--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -29,6 +29,9 @@
             <button data-add-counts class="add-docket-info btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
             <button data-generate class="generate-documents btn btn-success" disabled>Generate Documents <i class="fas fa-external-link-alt"></i></button>
         </div>
+        <div class="inset text-center button-div">
+            <button data-custom-counts class="crud-docket-info btn btn-danger">Manual Add Counts <i class="fas fa-plus-circle"></i></button>
+        </div>
         <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts" button.
         </p>
         <a id="vtCourtsOnlineA" target="_blank" href="https://secure.vermont.gov/vtcdas/user">
