--- a/sampleDocketHTML/sample2.html
+++ b/sampleDocketHTML/sample2.html
@@ -20,10 +20,10 @@
 		<pre>Vermont Superior Court                              Chittenden Criminal Division
  ______________________________________________________________________________
 |                                                                              |
-|  Docket No.  15-2-97 Cncr       State vs. Papadopoulos, George15-2-97 Cncr   |
+|  Docket No.  15-2-97 Cncr       State vs. Madeupperson, George15-2-97 Cncr   |
 |______________________________________________________________________________|
 
-Prosecutor:    Philip R. Danielson     Defendant:     George D. Papadopoulos
+Prosecutor:    Philip R. Danielson     Defendant:     George D. Madeupperson
                                        DOB:           8/19/1987
 Motions pdg:                           POB:           Chicago, IL
 Bail set:                              Atty:          Luis C. Garcia
@@ -67,7 +67,7 @@ Dspt  Docket No.      Ct. Statute              F/M/O
           1954321 - motion
           </b></i>
           Motion For Discovery filed by Attorney Luis C. Garcia for Defendant
-          George D. Papadopoulos on disputes 1-2. Motion For Discovery to be set
+          George D. Madeupperson on disputes 1-2. Motion For Discovery to be set
           for hearing.
 01/09/97  <i><b>
           1955094 - hrgheld
