--- a/sampleDocketHTML/sample3.html
+++ b/sampleDocketHTML/sample3.html
@@ -26,10 +26,10 @@
   <pre>Vermont Superior Court                              Chittenden Criminal Division
  ______________________________________________________________________________
 |                                                                              |
-|  Docket No.  0000-8-15 Cncr     State vs. Clinton, Hillary R. 0000-8-15 Cncr |
+|  Docket No.  0000-8-15 Cncr     State vs. Madeups, Hillary R. 0000-8-15 Cncr |
 |______________________________________________________________________________|
 
-Prosecutor:    Patrick Lamb            Defendant:     Hillary R. Clinton
+Prosecutor:    Patrick Lamb            Defendant:     Hillary R. Madeups
                                        DOB:           10/26/1947
 Motions pdg:                           POB:           
 Bail set:                              Atty:          David J. Williams
@@ -199,7 +199,7 @@ Dspt  Docket No.      Ct. Statute              F/M/O
           10181561 - motion
           </b></i>
           Motion to Continue 12/4 Status Conference filed by Attorney David J.
-          Williams for Defendant Hillary R. Clinton on disputes 1-3.
+          Williams for Defendant Hillary R. Madeups on disputes 1-3.
           Motion to Continue 12/4 Status Conference given to judge.
 11/17/15  <i><b>
           10181563 - motjudge
