--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -27,7 +27,9 @@
         </div>
         <div class="inset text-center button-div">
             <button data-add-counts class="add-docket-info btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
+            <button data-edit-counts class="edit-counts btn btn-primary">Edit Counts <i class="fas fa-plus-circle"></i></button>
             <button data-generate class="generate-documents btn btn-success" disabled>Generate Documents <i class="fas fa-external-link-alt"></i></button>
+
         </div>
         <p id="introText">To begin, navigate to a court docket page relating to your client, and click the "Add Counts" button.
         </p>
@@ -65,6 +67,7 @@
     <div class="popTop inset text-center bottom-div">
         <div class="inset text-center button-div">
             <button data-add-counts class="btn btn-primary">Add Counts <i class="fas fa-plus-circle"></i></button>
+            <button data-edit-counts class="edit-counts btn btn-primary">Edit Counts <i class="fas fa-plus-circle"></i></button>
             <button data-generate class="btn btn-success">Generate Documents <i class="fas fa-external-link-alt"></i></button>
         </div>
     </div>
