--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -505,6 +505,118 @@
 
                                 <!-- End Clinic Checkout Sheet -->
 
+                                <!-- Client Checkout Sheet -->
+
+                                <article class="page" id="client-checkout">
+                                    <div class="filing-document">
+                                        <div class="filing__title">Client Checkout Sheet</div>
+                                        <p v-if="settings.proSe" class="pro-se">ATTENTION: You are filing the petition(s) described below PRO SE. This means that you will have no attorney. You are responsible for responding or appearing in court if necessary.</p>
+                                        <div class="filing-body">
+                                            <div class="title petition__title"></div>
+                                            <div class="client-checkout-header filing-header">
+                                                <div class="client-checkout-header-left filing-header__half">
+                                                    <h1>Filings for {{petitioner.name}} (DOB: {{petitioner.dob}})
+                                                    </h1>
+                                                    <p class="filing-closing__petitioner-address" v-html="petitioner.address"></p>
+                                                    <p class="filing-closing__phone">Phone: <span class="no-visible">{{responses['phone']}}</span>
+                                                        <input class="no-print" v-model="responses['phone']" placeholder="Petitioner Phone Number">
+                                                    </p>
+                                                </div>
+                                                <div class="client-checkout-header-right filing-header__half">
+                                                    This is a summary of all expungement or sealing activity carried out today. If action was not taken on any VT criminal counts, it is noted here as well. Please review carefully and be sure to follow up where needed. <b>NOTE, this sheet DOES NOT necessarily include your entire criminal history.</b> Contact Legal Aid if you have additional questions.
+                                                </div>
+                                            </div>
+                                            <dl>
+                                                <table class="table summary-table">
+                                                    <col width="300">
+                                                    <thead class="">
+                                                        <th scope="col">Desc.</th>
+                                                        <th scope="col" Colspan="2">How did the case end?</th>
+                                                        <th scope="col">Docket #</th>
+                                                    </thead>
+                                                    <tbody>
+                                                        <th scope="col" Colspan="3" v-if="countsExpungedC.length > 0">
+                                                            CONVICTION petitions drafted...
+                                                        </th>
+                                                        <tr v-for="filing in countsExpungedC">
+                                                            <td>{{filing.description}}
+                                                                <p v-if="isStipulated(filing.filingType)">(The State
+                                                                    agreed to our expunge request)</p>
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                        <th scope="col" Colspan="3" v-if="countsExpungedNC.length > 0">
+                                                            NON-CONVICTION petitions drafted...
+                                                        </th>
+                                                        <tr v-for="filing in countsExpungedNC">
+                                                            <td>{{filing.description}}
+                                                                <p v-if="isStipulated(filing.filingType)">(The State
+                                                                    agreed to our expunge request)</p>
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                        <th scope="col" Colspan="3" v-if="countsExpungedNCrim.length > 0">
+                                                            NON-CRIME petitions drafted...
+                                                        </th>
+                                                        <tr v-for="filing in countsExpungedNCrim">
+                                                            <td>{{filing.description}}
+                                                                <p v-if="isStipulated(filing.filingType)">(The State
+                                                                    agreed to our expunge request)</p>
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                        <th scope="col" Colspan="3" v-if="countsSealC.length > 0">
+                                                            SEALED petitions drafted...</th>
+                                                        <tr v-for="filing in countsSealC">
+                                                            <td>{{filing.description}}
+                                                                <p v-if="isStipulated(filing.filingType)">(The State
+                                                                    agreed to our request to seal)</p>
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                        <th scope="col" Colspan="3" v-if="countsSealDui.length > 0">
+                                                            SEALED DUI petitions drafted...</th>
+                                                        <tr v-for="filing in countsSealDui">
+                                                            <td>{{filing.description}}
+                                                                <p v-if="isStipulated(filing.filingType)">(The State
+                                                                    agreed to our request to seal)</p>
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                        <th scope="col" Colspan="3" v-if="ineligible.length > 0">
+                                                            INELIGIBLE counts...</th>
+                                                        <tr v-for="filing in ineligible">
+                                                            <td><span v-if="isStipulated(filing.filingType)"><i class="fas fa-handshake"></i>&nbsp;</span>{{filing.description}}
+                                                            </td>
+                                                            <td>{{filing.dispositionDate}}</td>
+                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td v-html="filing.docketNum + ' ' + filing.docketCounty">
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+                                            </dl>
+                                        </div>
+                                    </div>
+                                </article>
+
+                                <!-- End Client Checkout Sheet -->
+
                             </section>
 
                             <!-- End Extra Documents -->
