--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -526,25 +526,17 @@
                                                     This is a summary of all expungement or sealing activity carried out today. If action was not taken on any VT criminal counts, it is noted here as well. Please review carefully and be sure to follow up where needed. <b>NOTE, this sheet DOES NOT necessarily include your entire criminal history.</b> Contact Legal Aid if you have additional questions.
                                                 </div>
                                             </div>
+                                            <attorney-notes scope="col" colspan=4 v-if="countsExpungedC.length > 0" v-bind:heading="'These are your convictions. We have created petitions to expunge these'"></attorney-notes>
                                             <dl>
+                                                <client-col-headings scope="col" colspan=4></client-col-headings>
                                                 <table class="table summary-table">
-                                                    <col width="300">
-                                                    <thead class="">
-                                                        <th scope="col">Desc.</th>
-                                                        <th scope="col" Colspan="2">How did the case end?</th>
-                                                        <th scope="col">Docket #</th>
-                                                    </thead>
                                                     <tbody>
-                                                        <th scope="col" Colspan="3" v-if="countsExpungedC.length > 0">
-                                                            CONVICTION petitions drafted...
-                                                        </th>
                                                         <tr v-for="filing in countsExpungedC">
                                                             <td>{{filing.description}}
-                                                                <p v-if="isStipulated(filing.filingType)">(The State
-                                                                    agreed to our expunge request)</p>
+                                                                <p v-if="isStipulated(filing.filingType)">(The State agreed to our expunge request)</p>
                                                             </td>
-                                                            <td>{{filing.dispositionDate}}</td>
-                                                            <td>{{filing.offenseDisposition}}</td>
+                                                            <td Colspan="2">{{filing.offenseDisposition}} - {{filing.dispositionDate}}
+                                                            </td>
                                                             <td v-html="filing.docketNum + ' ' + filing.docketCounty">
                                                             </td>
                                                         </tr>
@@ -650,5 +642,3 @@
         <script id='script' src="csv.js"></script>
 
 </body>
-
-</html>
